--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,79 @@
-@import 'vars';
-@import 'fonts';
-@import 'reset';
-@import 'global';
+@use 'media';
+@use 'vars';
+@use 'fonts';
+@use 'reset';
+@use 'global';
 
 
 
-@import 'media';
+.header{
+    padding: 40px 0;
+
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.menu{
+
+    &__list{
+        display: flex;
+    }
+
+    &__list-item + .menu__list-item{
+        padding-left: 35px;        
+    }
+
+    &__list-link{
+      color: vars.$title;
+      padding-bottom: 1px;
+      transition: all .3s;
+      @extend %quicksand-400;
+        &:hover{
+            color: vars.$accent;
+           border-bottom: 1px solid #fe3e57;
+           @extend %quicksand-500;
+        }
+    }
+    
+    &__list-link--active{
+        color: vars.$accent;
+        border-bottom: 1px solid #fe3e57;
+        @extend %quicksand-500;
+    }
+    
+}
+
+.user-nav{
+    display: flex;
+
+    &__link{
+        position: relative;
+    }
+
+    &__link-img{
+        width: 20px;
+        height: 20px;
+    }
+
+    &__link + .user-nav__link{
+        padding-left: 25px;
+    }
+
+    &__num{
+        position:absolute;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: vars.$accent;
+        top: -9px;
+        right: -14px;
+        font-size: 12px;
+        color: #fff;
+        text-align: center;
+        line-height: 20px;
+    }
+}
 
