--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,5 +1,9 @@
 @use 'vars';
 
+html,
+body{
+    height: 100%;
+}
 
 
 body{
@@ -7,10 +11,23 @@ body{
     font-size: 16px;
     line-height: 26px;
     @extend %quicksand-500;
+    display: flex;
+    flex-direction: column;
+}
+
+.main{
+    flex-grow: 1;
 }
 
 .conteiner{
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+a{
+    color: vars.$default;
+    font-size: 16px;
+    line-height: 26px;
+    @extend %quicksand-500;   
 }
