--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -28,20 +28,20 @@
 
     &__list-link{
       color: vars.$title;
-      padding-bottom: 1px;
+      padding: 0 2px 1px;
       transition: all .3s;
-      @extend %quicksand-400;
+      @extend %roboto-400;
         &:hover{
             color: vars.$accent;
            border-bottom: 1px solid #fe3e57;
-           @extend %quicksand-500;
+           @extend %roboto-700;
         }
     }
     
     &__list-link--active{
         color: vars.$accent;
         border-bottom: 1px solid #fe3e57;
-        @extend %quicksand-500;
+        @extend %roboto-700;
     }
     
 }
@@ -184,7 +184,7 @@ background-color: vars.$bg;
     justify-content: space-between;
     align-items: center;
     font-size: 12px;
-    
+
     &__accept-img{
         display: inline-block;
         margin-left: 25px;    
