--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -193,7 +193,7 @@ background-color: vars.$bg;
 
 
 .top-slider{
-    background-image: url('../images/top-slider-bg.png');
+    background-image: url('../images/decore/top-slider-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-color: vars.$bg;
@@ -274,12 +274,12 @@ background-color: vars.$bg;
 
 .categories-info{
     padding: 120px 0;
-    background-image: url('../images/categories_left_bg.png');
+    background-image: url('../images/decore/categories_left_bg.png');
     background-position: center left;
     background-repeat: no-repeat;
 
     &__inner{
-        background-image: url('../images/categories_right_bg.png');
+        background-image: url('../images/decore/categories_right_bg.png');
         background-position: center right;
         background-repeat: no-repeat;
         }
@@ -396,4 +396,32 @@ background-color: vars.$bg;
         @extend %roboto-400;
         transition: all .3s;
     }
+}
+
+.video-fashion{
+background-color: vars.$bg;
+background-image: url('../images/decore/fash-pattern-bg.png');
+background-repeat: no-repeat;
+background-size: cover;
+padding: 125px 0;
+&__inner{
+    display: flex;
+}
+
+&__popup{
+    margin-right: 60px;
+    max-width: 530px;
+    width: 100%;
+    height: 480px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+&__content{
+max-width: 570px;
+}
 }
