--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,1 +1,2 @@
-@use '../../node_modules/slick-carousel/slick/slick.scss'
+@use '../../node_modules/slick-carousel/slick/slick.scss';
+@use '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.css';
