added product section

--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,2 +1,3 @@
 @use '../../node_modules/slick-carousel/slick/slick.scss';
-@use '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.css';
+@use '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
+@use '../../node_modules/@rateyo/jquery/lib/iife/jquery.rateyo'
