promo and partners

--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,3 +1,3 @@
 @use '../../node_modules/slick-carousel/slick/slick.scss';
-@use '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
-@use '../../node_modules/@rateyo/jquery/lib/iife/jquery.rateyo'
+@use '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox' as fancy;
+@use '../../node_modules/@rateyo/jquery/lib/iife/jquery.rateyo' as rateyo;
