--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -590,6 +590,7 @@ background-color: vars.$bg;
         flex-direction: column;
         justify-content: center;
         text-align: center;
+        box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
         span{
             font-size: 48px;
             @extend %roboto-700;
@@ -597,11 +598,6 @@ background-color: vars.$bg;
             margin: 10px 0 7px;
         }
     }
-
-    &__text{
-        
-    }
-    
 
     &__link{
         text-transform: uppercase;
@@ -623,4 +619,111 @@ background-color: vars.$bg;
         justify-content: space-between;
         align-items: center;
     }
+}
+
+.blog{
+    padding: 50px 0 160px;
+    background-image: url("../images/decore/blog_bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    
+
+    &__items{
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            right: -25px;
+            top: -34px;
+            z-index: 1;
+            width: 129px;
+            height: 56px;
+            background-image: url('../images/decore/blog_sqr_bg.png');
+            
+        }
+
+    }
+
+    &__item{
+        max-width: 370px;
+        border: 1px solid #ececec;
+        transition: all .3s;
+        z-index: 2;
+        &:hover{
+            box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+            border: none;
+            .blog__item-link{
+                color: vars.$accent;
+                &::after{
+                    background-image: url('../images/icons/accent-arrow.svg');
+                }
+            }
+        }
+    }
+
+    &__item-imglink{
+        display: block ;
+        img{
+            height: 288px;
+            object-fit: cover;
+        }
+    }
+
+    &__item-box{
+        padding: 30px 40px;
+    }
+
+    &__item-info{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    &__item-author,
+    &__item-date{
+        padding-left: 30px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            left: 0;
+            top: 4px;
+        }
+    }
+
+    &__item-author::before{
+        background-image: url('../images/icons/user_greyy.svg');
+        
+    }
+
+    &__item-date::before{
+        background-image: url('../images/icons/clock.svg');
+    }
+
+    &__item-title{
+        color: vars.$title;
+        @extend %roboto-400;
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+
+    &__item-link{
+        position: relative;
+        transition: all .3s;
+    }
+
+    &__item-link::after{
+        content: '';
+        background-image: url('../images/icons/arrow-right.svg');
+        width: 14px;
+        height: 11px;
+        position: absolute;
+        top: 4px;
+        right: -14px;
+    }
+
 }
