--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -800,3 +800,36 @@ background-color: vars.$bg;
         margin-bottom: 25px;
     }
 }
+
+.page-404{
+    padding: 110px 120px;
+
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__content{
+        max-width: 570px;
+        width: 100%;
+    }
+
+    &__title{
+        @extend %roboto-700;
+        color: #28384f;
+        margin-bottom: 40px;
+        font-size: 48px;
+    }
+
+    &__text{
+        margin-bottom: 55px;
+        max-width: 470px
+    }
+
+    &__link{
+        @extend %btn; 
+        padding: 14px 35px;
+    }
+
+}
