create a shop page

--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,3 +1,6 @@
 @use '../../node_modules/slick-carousel/slick/slick.scss';
 @use '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox' as fancy;
 @use '../../node_modules/@rateyo/jquery/lib/iife/jquery.rateyo' as rateyo;
+@use '../../node_modules/ion-rangeslider/css/ion.rangeSlider' as rangeSlider;
+@use '../../node_modules/jquery-form-styler/dist/jquery.formstyler' as formstyler;
+// @use '../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme' as formstyler_theme; 
