--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -101,3 +101,50 @@ margin: 0 auto 55px;
 .header--404-page{
     background-color: vars.$bg;
 }
+
+.pagination{
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
+    .pagination__list{
+        display: flex;
+        padding: 0 35px;
+    }
+
+    .__item{
+        padding: 0 15px;
+
+    }
+
+    &__link--active{
+        color: vars.$accent;
+    }
+
+    &__arrows{
+        text-transform: uppercase;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 10px;
+            height: 20px;
+            top: 8px; 
+        }
+    }
+
+    &__prev{
+        padding-left: 15px;
+        &::before{
+            background-image: url('../images/icons/angle-left.svg') ;
+            left: 0;
+        }
+    }
+
+    &__next{
+        padding-right: 15px;
+        &::before{
+            background-image: url('../images/icons/angle-right.svg') ;
+            right: 0;
+        }
+    }
+}
