--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -111,7 +111,7 @@ margin: 0 auto 55px;
         padding: 0 35px;
     }
 
-    .__item{
+    &__item{
         padding: 0 15px;
 
     }
@@ -128,7 +128,7 @@ margin: 0 auto 55px;
             position: absolute;
             width: 10px;
             height: 20px;
-            top: 8px; 
+            top: 3px; 
         }
     }
 
