--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2126,3 +2126,124 @@ background-color: vars.$bg;
     color: vars.$title;
     text-transform: uppercase;
 }
+
+.map{
+    padding: 120px 0;
+}
+
+#map{
+    width: 100%;
+    height: 450px;
+}
+
+.contact{
+    padding-bottom: 120px;
+
+    &__inner{
+        display: flex;
+    }
+
+    &__info{
+        max-width: 370px;
+        margin-right: 30px;
+    }
+
+    &__info-title{
+        @extend %roboto-700;
+        font-size: 48px;
+        line-height: 58px;
+        margin-bottom: 20px;
+        color: vars.$title;
+    }
+
+    &__info-text{
+        margin-bottom: 60px;
+    }
+
+    &__info-item{
+        margin-top: 55px;
+        color: vars.$title;
+        padding-left: 80px;
+        position: relative;
+        &::before{
+            content: "";
+            position: absolute;
+            left: 0;
+            top: -5px;
+            width: 60px;
+            height: 60px;
+            border: 1px solid #fff;
+            box-shadow: 0 5px 20px 0 rgba(146, 146, 146, 0.3);
+            
+        }
+        &::after{
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            top: 15px;
+            left: 19px;
+            background-image: url(../images/icons/phone-call.svg);
+        }
+    }
+
+    &__info-item--location::after{
+        background-image: url(../images/icons//marker.svg);
+    }
+
+    &__info-item--email::after{
+        background-image: url(../images/icons/envelope.svg);
+    }
+
+    &__info-phone{
+        display: block;
+        color: vars.$title;
+    }
+
+    &__form{
+        width: 100%;
+        padding: 60px 40px;
+        box-shadow: 0 5px 20px 0 rgba(146, 146, 146, 0.3);
+    }
+
+    &__form-title{
+        font-size: 22px;
+        margin-bottom: 20px;
+        color: vars.$title;
+        @extend %roboto-700;
+    }
+
+    &__form-input{
+        width: 100%;
+        display: block;
+        height: 60px;
+        background-color: vars.$bg;
+        border: none;
+        padding: 0 24px;
+        margin-bottom: 30px;
+    }
+
+    &__form-textarea{
+        width: 100%;
+        display: block;
+        height: 200px;
+        resize: none;
+        background-color: vars.$bg;
+        border: none;
+        padding: 24px;
+        margin-bottom: 30px;
+    }
+
+    &__form-box{
+        display: flex;
+        justify-content: space-between;
+        input{
+            width: 330px;
+        }
+    }
+
+    &__form-btn{
+        @extend %btn;
+        border: none;
+    }
+}
