--- a/app/module/_partners/_partners.scss
+++ b/app/module/_partners/_partners.scss
@@ -15,3 +15,37 @@
         align-items: center;
     }
 }
+
+@media (max-width: 620px){
+    .partners{
+        padding-top: 60 0;
+        &__list{
+            flex-wrap: wrap;
+            justify-content: center;
+            height: auto;
+        }
+
+        &__item{
+            margin: 10px 35px;
+        }
+    }
+}
+
+@media (max-width: 500px){
+    .partners{
+
+        &__item{
+            margin: 10px 25px;
+        }
+    }
+}
+
+@media (max-width: 450px){
+    .partners{
+
+        &__item{
+            margin: 10px 25px;
+        }
+    }
+}
+
